공유변수 클래스화

--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/radiu/Downloads/jdeli-trial.jar"/>
+	<classpathentry kind="lib" path="C:/Users/radiu/Downloads/gson-2.8.5.jar" sourcepath="C:/Users/radiu/Downloads/gson-2.8.5-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
